# rag-full-cycle

./: .gitignore  README.md  pyproject.toml
configs/: baby.json  base.json  fy10.json
output/: chunks-100-10.json  extract.json  questions-100-10.json  retrievers-100-10.json  tester-100-10.json  vectors-100-10.json
src/rag_full_cycle/: chunk_generator.py  chunks.py  config.py  embedding_generator.py  embeddings.py  evals.py  extract_generator.py  extracts.py  main.py  models.py  question_generator.py  question_tester.py  questions.py  retrievers.py  vector_generator.py  vectors.py
src/rag_full_cycle/output/fy10syb/: chunks-512-64.json  evals-512-64.json  extract.json  questions-512-64.json  retrievers-512-64.json  vectors-512-64.json
src/rag_full_cycle/output/the-three-little-pigs-original/: chunks-100-10.json  evals-100-10.json  questions-100-10.json  retrievers-100-10.json  vectors-100-10.json
